--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
 </head>
 <body>
     <header>
-        <a href="#">Ссылка на основную страницу</a>
+        <a href="index.html">
+            <img src="#" alt="логотип Celestia">
+        </a>
         <nav>
-            <a href="#">Ссылка 1</a>
-            <a href="#">Ссылка 2</a>
-            <a href="#">Ссылка 3</a>
+            <a href="#">Главная</a>
+            <a href="#">События</a>
+            <a href="#">Акции</a>
+            <a href="#">Отзывы</a>
+            <a href="#">FAQ</a>
+            <a href="#">Контакты</a>
         </nav>
+        <ul class="header_ul">
+            <li>
+                <img src="#" alt="ссылка на WhatsApp">
+            </li>
+            <li>
+                <img src="#" alt="ссылка на Telegramm">
+            </li>
+        </ul>
+        <a href="tel:+78123363636">(812) 336 36 36</a>
+
     </header>
     <main>
-        <h1>Заголовок 1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Perspiciatis, ducimus tenetur autem aut quasi animi ea libero 
-            accusamus inventore sunt maiores reiciendis beatae explicabo 
-            blanditiis doloribus, dignissimos repellendus sequi qui.
-        </p>
+
     </main>
     <footer>
-        <form action="#">
-            <input type="text">
-            <input type="submit">
-        </form>
+
     </footer>
 </body>
 </html>
