подключение шрифтов и пользоваетльских переменных

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gnibeda</title>
-    <style>
-        * {
-            border: 1px solid red;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
+
 
 <body>
     <header>
@@ -41,6 +40,8 @@
         <h1>Celestia - интерактивный планетарий</h1>
         <section class="about_planetarium">
             <h2>Информация о компании и акциях</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae culpa autem sunt, est laborum
+                repudiandae deserunt deleniti eaque facilis perspiciatis.</p>
             <div class="promo-first">
                 <p>Раскройте тайны звезд с помощью <span>Celestia</span></p>
                 <p>Мы проводим специальные мероприятия, такие как ночи
@@ -167,7 +168,7 @@
                     <p>
                         Я настоятельно рекомендую планетарий всем, кто хочет
                         почувствовать незабываемое впечатление
-                        и познать немного  про нашу вселенную!
+                        и познать немного про нашу вселенную!
                     </p>
                 </li>
                 <li>
