--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-
-
 <body>
     <header>
         <a href="index.html">
@@ -37,25 +35,23 @@
         <button type="button">Открыть дополлнительное меню</button>
     </header>
     <main>
-        <h1>Celestia - интерактивный планетарий</h1>
+        <h1 class="sr-only">Celestia - интерактивный планетарий</h1>
         <section class="about_planetarium">
-            <h2>Информация о компании и акциях</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae culpa autem sunt, est laborum
-                repudiandae deserunt deleniti eaque facilis perspiciatis.</p>
+            <h2 class="sr-only">Информация о компании и акциях</h2>
             <div class="promo-first">
-                <p>Раскройте тайны звезд с помощью <span>Celestia</span></p>
+                <p class="slogan">Раскройте тайны звезд с помощью <span>Celestia</span></p>
                 <p>Мы проводим специальные мероприятия, такие как ночи
                     наблюдения за звездами, лекции и многое другое</p>
                 <a href="#">Подробнее</a>
             </div>
             <ul class="promo-second">
                 <li class="promo-second-elder">
-                    <p>20%</p>
+                    <p class="slogan">20%</p>
                     <p>скидка пенсионерам</p>
                     <a href="#"><img src="#" alt="Переход по ссылке"></a>
                 </li>
                 <li class="promo-second-couple">
-                    <p>Для парочек</p>
+                    <p class="slogan">Для парочек</p>
                     <p>ночи наблюдения за звездами</p>
                     <a href="#"><img src="#" alt="Переход по ссылке"></a>
                 </li>
